--- a/L34-AZ-02 Azure Disks/pod.yaml
+++ b/L34-AZ-02 Azure Disks/pod.yaml
@@ -20,7 +20,12 @@ spec:
     volumeMounts:
       - mountPath: "/azuredisk/"
         name: myazuredisk
+      - mountPath: "/mnt/azurecsidisk"
+        name: mycsidisk
   volumes:
     - name: myazuredisk
       persistentVolumeClaim:
         claimName: azure-managed-disk
+    - name: mycsidisk
+      persistentVolumeClaim:
+        claimName: pv-azuredisk
