--- a/L14-AZ-03 Local Files/docker-compose.yml
+++ b/L14-AZ-03 Local Files/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   kuard:
-    image: k8sacademy/kuard:latest
+    image: guybarrette/kuard:latest
     ports:
       - "80:8080"
     volumes:
